# PsyPsy-CMS

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DASHBOARD_README.md  GLOBAL_THEME_GUIDE.md  README.md  SIMPLIFIED_DASHBOARD_README.md  SOCIAL_MEDIA_INTEGRATION.md  THEME_IMPLEMENTATION_SUMMARY.md  components.json  firebase.json  firestore.indexes.json  from figma to alloy.md  jsconfig.json  package-lock.json  package.json  react-errors.db  tauri-autofix.db
.claude/: settings.local.json
.cursor/: mcp.json
.cursor/custom-modes/: TaskExecutor.md  TaskPlanner.md
.cursor/documentation/: Client.md  fetchUsersResponse.md
.cursor/mcpsDocs/: openrouterai-mcp  react-analyser-mcp.md
.cursor/memory-bank/: ParseServerIntegration.md  activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ClassStructDocs/: Appointment.md  Professional.md  TimeSlotOffer.md  User.md
Darkone-React_v1.0/Documentation/: index.html
Darkone-React_v1.0/JS/: index.html  jsconfig.json  package-lock.json  package.json  tsconfig.app.json  vite.config.js
Darkone-React_v1.0/TS/: package.json
PsyPsyCMS/: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMPREHENSIVE_TEST_SUITE.md  FIRESTORE_SECURITY_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  package.json.dependencies  setup-firebase-emulator.md  tailwind.config.js  test-console.html  test-firebase-connection.cjs  test-medical-notes.cjs  test-meeting-commands.cjs  test-professionals-api.js  tsconfig.json  vite.config.mjs  vite.config.ts
PsyPsyCMS/.cms-debugger/: README.md  debug.config.json  mcp-server-config.json
PsyPsyCMS/.cms-debugger-brain/: README.md
PsyPsyCMS/.taskmaster/: config.json  state.json
PsyPsyCMS/docs/: AUDIT_REPORT.md  DEVELOPMENT_STANDARDS.md  DOCUMENTATION_CLEANUP_FINAL_REPORT.md  MIGRATION_PLAN.md  QA_REVIEW_CHECKLIST.md  README.md  TABLES_GUIDE.md  documentation-cleanup-prd.md  quebec-ai-models-compliance-guide.md  serena-mcp-usage.md
PsyPsyCMS/meeting-minutes/: CLAUDE.md
PsyPsyCMS/note-gen/: .eslintrc.json  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
PsyPsyCMS/note-gen/src-tauri/: Cargo.toml  tauri.conf.json
PsyPsyCMS/note-gen/src-tauri/capabilities/: default.json  desktop.json
PsyPsyCMS/note-gen/src-tauri/icons/: icon.icns
PsyPsyCMS/note-gen/src-tauri/src/: app_setup.rs  backup.rs  fuzzy_search.rs  keywords.rs  lib.rs  main.rs  screenshot.rs  tray.rs  webdav.rs  window.rs
PsyPsyCMS/public/: firebase-messaging-sw.js
PsyPsyCMS/scripts/: automated-test-runner.js  load-seed-data.js  switch-environment.js  test-firebase-connection.js
PsyPsyCMS/src/: App-simple.tsx  App.tsx  globals.css  main.tsx  vite-env.d.ts
PsyPsyCMS/src-tauri/: Cargo.toml  console-capture-script.js  tauri.conf.json
PsyPsyCMS/src-tauri/migrations/cmek/: 001_create_cmek_tables.sql
PsyPsyCMS/src-tauri/migrations/dlp/: 001_create_dlp_tables.sql
PsyPsyCMS/src-tauri/migrations/medical_notes/: 001_create_medical_notes.sql
PsyPsyCMS/src-tauri/migrations/notifications/: 001_create_notification_tables.sql
PsyPsyCMS/src-tauri/migrations/quebec_audit/: 001_create_enhanced_audit_tables.sql
PsyPsyCMS/src-tauri/migrations/quebec_compliance/: 001_create_quebec_audit_logs.sql
PsyPsyCMS/src-tauri/migrations/social_media/: 001_create_social_media_tables.sql
PsyPsyCMS/src-tauri/migrations/vertex_ai/: 001_create_vertex_ai_tables.sql
PsyPsyCMS/src-tauri/src/: console_capture.rs  devtools_server.rs  lib.rs  lib_full.rs  lib_minimal_working.rs  main.rs
PsyPsyCMS/src-tauri/src/commands/: appointment_commands.rs  auth_commands.rs  client_commands.rs  debug_commands.rs  medical_notes_commands.rs  mod.rs  offline_sync_commands.rs  professional_commands.rs  social_media_commands.rs  user_commands.rs
PsyPsyCMS/src-tauri/src/compliance/: mod.rs  quebec_law25.rs
PsyPsyCMS/src-tauri/src/meeting/: analytics.rs  mod.rs
PsyPsyCMS/src-tauri/src/meeting/audio/: core.rs  mod.rs
PsyPsyCMS/src-tauri/src/models/: appointment.rs  client.rs  common.rs  mod.rs  professional.rs
PsyPsyCMS/src-tauri/src/security/: audit.rs  auth.rs  compliance.rs  crypto.rs  mod.rs  rate_limit.rs  rbac.rs  validation.rs
PsyPsyCMS/src-tauri/src/services/: compliance_validation_service.rs  deidentification.rs  dlp_service.rs  encrypted_storage.rs  firebase_cmek_service.rs  firebase_functions_api.rs  firebase_service.rs  firebase_service_quebec.rs  firebase_service_simple.rs  gcp_security_service.rs  mod.rs  notification_service.rs  offline_sync.rs  quebec_audit_service.rs  quebec_compliance_service.rs  social_media_service.rs  vertex_ai_service.rs
PsyPsyCMS/src-tauri/src/storage/: medical_notes_store.rs  mod.rs  sync_manager.rs
PsyPsyCMS/src-tauri/src/tests/common/: fixtures.rs  mod.rs
PsyPsyCMS/tests/: global-setup.ts  global-teardown.ts
context-engineering/: ASPECT_5_SUMMARY.md  CONSOLIDATION_SUMMARY.md  INITIAL.md  MIGRATION_INTEGRATION_SUMMARY.md  TASK.md  TAURI_MIGRATION_EXECUTION_REPORT.md  TAURI_MIGRATION_PLANNING.md  package.json  playwright.config.ts  vitest.config.ts
context-engineering/PRPs/: data-export-excel-csv.md  drag-drop-dnd-kit.md  tanstack-form-validation.md  tanstack-query-integration.md  (+5 more)
context-engineering/archive/old-src-tauri/: Cargo.toml  tauri.conf.json
context-engineering/archive/old-src-tauri/src/: lib.rs
context-engineering/archive/old-src-tauri/src/security/: audit.rs  compliance.rs  mod.rs
docs/: CHANGELOG.md
electron/: main.js  preload.js
electron-cms/: README.md  firestore.rules  jsconfig.json  storage.rules
mcp-data/: WebGUI.md  project-config.md  quick-start.md  setup-guide.md  tasks.json
mcps/: analyze-darkone.js
public/: index.html
scripts/: createAdmin.js  migrate-parse-to-firebase.js  sync-i18n.js  testConnection.js
src/: App.js  FirebaseApp.js  index.js  routes.js  test-client-service.js
(+853 files in other folders)
