[package]
name = "psypsy-cms-tauri"
version = "0.1.0"
description = "PsyPsy CMS - HIPAA Compliant Healthcare Management System"
authors = ["PsyPsy Team"]
license = "MIT"
repository = "https://github.com/psypsy/cms-tauri"
edition = "2021"

# HIPAA Compliance: Set minimum supported Rust version for security patches
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "psypsy_cms_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "psypsy-cms-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Medical Grade Encryption (HIPAA Compliance)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
password-hash = "0.5"
base64 = "0.21"
rand = "0.8"
zeroize = "1.7"
subtle = "2.5"

# Firebase & Database
firestore = "0.47"
rs-firebase-admin-sdk = "1.0"
gcp_auth = "0.10"
gcloud-sdk = "0.25"
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
# r2d2 = "0.8"
# r2d2_sqlite = "0.24"

# Security & Crypto
ring = "0.17"
rsa = "0.9"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Audit & Logging (HIPAA Requirements)
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
# syslog = "6.1"

# Rate Limiting & Security
governor = "0.6"
tower = "0.4"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# WebSocket for DevTools Integration (cms-debugger)
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Data Validation & Sanitization
validator = { version = "0.18", features = ["derive"] }
# sanitize_html = "0.4"  # Commented out due to threading issues
regex = "1.10"

# Error Handling & Monitoring
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Background Tasks & Scheduling
tokio-cron-scheduler = "0.9"
async-std = "1.12"

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# Time & Date Handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# HTTP Client for API Integration
ureq = { version = "2.9", features = ["json", "tls"] }

# Audio Recording & Processing (for meeting functionality)
cpal = "0.15"
hound = "3.5"
bytemuck = "1.16"
crossbeam = "0.8"
dashmap = "6.1"
dirs = "5.0"
lazy_static = "1.4"
realfft = "3.4"
rubato = "0.15"
once_cell = "1.17"
posthog-rs = "0.3"
which = "6.0"
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", branch = "main" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
hipaa-audit = []
dev-mode = []

# HIPAA Compliance: Ensure reproducible builds
[profile.release]
# Security: Enable Control Flow Integrity
panic = "abort"
# Performance optimizations while maintaining security
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
# Development optimizations
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[dev-dependencies]
# Testing Framework
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Test Utilities
serial_test = "3.0"
tempfile = "3.8"
fake = { version = "2.9", features = ["derive", "chrono"] }

# Async Testing
futures = "0.3"

