[package]
name = "note-gen"
version = "0.1.0"
description = "A Tauri App"
authors = ["codexu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "protocol-asset", "image-png", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "=2.3.0", features = ["unsafe-headers"] }
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
urlencoding = "2.1.3"
percent-encoding = "2.3.0"
fuzzy-matcher = "0.3.7"
rayon = "1.8.0"
tokio = { version = "1", features = ["full"] } 
url = "2.5"
reqwest_dav = "=0.2.1"
tauri-plugin-opener = "2.4.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard = "2"
xcap = "=0.6.0"
reqwest_dav = "=0.2.1"
tauri-plugin-process = "=2.0.0"
jieba-rs = { version = "0.7", features = ["textrank"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies.tauri]
version = "2"
features = ["tray-icon"]
