[package]
name = "psypsy-cms-tauri"
version = "0.1.0"
description = "PsyPsy CMS - HIPAA Compliant Healthcare Management System"
authors = ["PsyPsy Team"]
license = "MIT"
repository = "https://github.com/psypsy/cms-tauri"
edition = "2021"

# HIPAA Compliance: Set minimum supported Rust version for security patches
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Framework
tauri = { version = "2.0", features = [
    "shell-open",
    "window-all",
    "process-command-api",
    "protocol-asset",
    "tray-icon",
    "notification-all",
    "clipboard-all"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Firebase Integration & Authentication
firebase-auth-rs = "0.3"
jsonwebtoken = "9.2"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Medical Grade Encryption (HIPAA Compliance)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
subtle = "2.5"

# Database & Storage
surrealdb = { version = "1.0", features = ["kv-rocksdb"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Security & Crypto
ring = "0.17"
rsa = "0.9"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"

# Audit & Logging (HIPAA Requirements)
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
syslog = "6.1"

# Rate Limiting & Security
governor = "0.6"
tower = { version = "0.4", features = ["rate-limit"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data Validation & Sanitization
validator = { version = "0.18", features = ["derive"] }
sanitize-html = "0.4"
regex = "1.10"

# Error Handling & Monitoring
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Background Tasks & Scheduling
tokio-cron-scheduler = "0.9"
async-std = "1.12"

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# Time & Date Handling
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# HTTP Client for API Integration
ureq = { version = "2.9", features = ["json", "tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
]}

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"
core-foundation = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
hipaa-audit = []
dev-mode = []

# HIPAA Compliance: Ensure reproducible builds
[profile.release]
# Security: Enable Control Flow Integrity
panic = "abort"
# Performance optimizations while maintaining security
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
# Development optimizations
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[dev-dependencies]
# Testing Framework
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Test Utilities
serial_test = "3.0"
tempfile = "3.8"
fake = { version = "2.9", features = ["derive", "chrono"] }

# Async Testing
futures = "0.3"

[[bench]]
name = "healthcare_benchmarks"
harness = false